--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://demos.creative-tim.com/black-dashboard-pro-react/#/admin/dashboard",
   "dependencies": {
+    "apexcharts": "^3.29.0",
     "bootstrap": "4.5.3",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
@@ -15,12 +16,14 @@
     "perfect-scrollbar": "1.4.0",
     "prop-types": "15.7.2",
     "react": "17.0.1",
+    "react-apexcharts": "^1.3.9",
     "react-big-calendar": "0.30.0",
     "react-bootstrap-sweetalert": "5.2.0",
     "react-bootstrap-wizard": "0.0.9",
     "react-chartjs-2": "2.11.1",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.1",
+    "react-icons": "^4.3.1",
     "react-jvectormap": "0.0.16",
     "react-notification-alert": "0.0.13",
     "react-router-dom": "5.2.0",
